recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: not found: value level
  if (level!=0){
      ^Koch:13: error: not found: value snowside
  snowside(levels-1, length/3)
  ^Koch:15: error: not found: value snowside
  snowside(levels-1, length/3)
  ^Koch:17: error: not found: value snowside
  snowside(levels-1, length/3)
  ^Koch:19: error: not found: value snowside
  snowside(levels-1, length/3)
  ^